--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
             <div class="footer-left">
                 <div class="footer-company-about">
                     <h3><span>About</span> Us</h3>
-                    <p>Senantiasa <span class="accent-color">Melindungi</span> Mengayomi <span class="accent-color">dan/span> Melayani Masyarakat.</p>
+                    <p>Senantiasa <span class="accent-color">Melindungi</span> Mengayomi <span class="accent-color">dan</span> Melayani Masyarakat.</p>
                     <p>Salam <span class="accent-color">Presisi</span> Polri.</span>
                 </div>
                 <div class="footer-icons">
@@ -85,7 +85,7 @@
         <script src="https://kit.fontawesome.com/abebfafba8.js" crossorigin="anonymous"></script>
     </body>
 </html>
-65l2.5665j0j7&sourceid=chrome&ie=UTF-8" target="_blank" rel="noopener" aria-label="Visit our Google My Business page (opens in a new tab)"><i class="fab fa-google"></i></a>
+65l2.5665j0j7&sourceid=chrome&ie=UTF-8" target="_blank" rel="noopener" aria-label="Visit our Google My page (opens in a new tab)"><i class="fab fa-google"></i></a>
                     <a href="https://www.instagram.com/righthandshandymancarlow/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
                 </div>       
             </div>
@@ -106,7 +106,7 @@
                 <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
                 <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
                 <p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright">Right Hands Ltd &copy; 2022. All Rights Reserved</span></p>
+                <p><span class="footer-copyright">Samapta &copy; 2022. All Rights Reserved</span></p>
             </div>
         </footer>
         <!-- font awesome script -->
