--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="footer-left">
         <div class="footer-company-about">
           <h3><span>About Us</span></h3>
-          <p>Senantiasa<span class="accent-color">Melindungi</span> Melayani <span class="accent-color">dan</span> Melindungi Masyarakat.</p>
+          <p>Senantiasa<span class="accent-color">Melindungi</span> Mengayomi <span class="accent-color">dan</span> Melayani Masyarakat.</p>
           <p>Salam <span class="accent-color">Presisi</span> Polri.</span>
         </div>
         <div class="footer-icons">
