--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
                     <nav class="menu">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="service.html" class="active">Services</a></li>
+                            <li><a href="service.html" class="active">UraianGiat</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="contacts.html">Contacts</a></li>
                         </ul>
@@ -34,7 +34,7 @@
         <!-- Services -->
         <main id="services">
             <div class="services-container-content">
-                <div class="Lap har giat>
+                <div class="Lap har giat">
                     <h1>Samapta</h1>
                     <ul class="services-list">
                         <li>Pg Pagi</li>
@@ -51,8 +51,8 @@
             <!-- footer left -->
             <div class="footer-left">
                 <div class="footer-company-about">
-                    <h3><span>About</span> Us</h3>
-                    <p>Senantiasa <span class="accent-color">Melindungi</span> Mengayomi <span class="accent-color">dan</span> Melayani Masyarakat.</p>
+                    <h3><span>Tentang</span> Us</h3>
+                    <p>Senantiasa <span class="accent-color">Melindungi </span> Mengayomi <span class="accent-color"> dan </span> Melayani Masyarakat.</p>
                     <p>Salam <span class="accent-color">Presisi</span> Polri.</span>
                 </div>
                 <div class="footer-icons">
@@ -70,7 +70,7 @@
                 <p>080808</p>
                 </div>
                 <div><i class="fa fa-envelope"></i>
-                <p><a href="mailto:mailmail@gmail.com">info@righthands.ie</a></p>
+                <p><a href="mailto:mailmail@gmail.com">Samapta</a></p>
                 </div>
             </div>
             <!-- footer right -->
@@ -92,13 +92,13 @@
             <!-- footer center -->
             <div class="footer-center">
                 <div><i class="fa fa-map-marker"></i>
-                <p>County Carlow - Ireland</p>
+                <p>Jln Pramuka No 1 - Singaraja</p>
                 </div>
                 <div><i class="fa fa-phone"></i>
-                <p>+353 89 451 64 03</p>
+                <p>080808</p>
                 </div>
                 <div><i class="fa fa-envelope"></i>
-                <p><a href="mailto:akozorkova@gmail.com">info@righthands.ie</a></p>
+                <p><a href="mailto:mailmail@gmail.com">info@righthands.ie</a></p>
                 </div>
             </div>
             <!-- footer right -->
