--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ok<!DOCTYPE html>
 <html lang="en">
   <head>
       <meta charset="UTF-8">
@@ -44,7 +44,7 @@
       <div class="footer-left">
         <div class="footer-company-about">
           <h3><span>About Us</span></h3>
-          <p>Senantiasa<span class="accent-color">Melindungi</span> Mengayomi <span class="accent-color">dan</span> Melayani Masyarakat.</p>
+          <p>Senantiasa <span class="accent-color"> Melindungi</span> Mengayomi <span class="accent-color"> dan </span> Melayani Masyarakat.</p>
           <p>Salam <span class="accent-color">Presisi</span> Polri.</span>
         </div>
         <div class="footer-icons">
@@ -56,7 +56,7 @@
       <!-- footer center-->
       <div class="footer-center">
         <div><i class="fa fa-map-marker"></i>
-        <p>County Carlow - Ireland</p>
+        <p>Jln Pramuka No 1 - Singaraja</p>
         </div>
         <div><i class="fa fa-phone"></i>
         <p>08080808</p>
@@ -70,7 +70,7 @@
         <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
         <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
         <p><span class="accent-color">Sun</span> Closed</p>
-        <p><span class="footer-copyright">Right Hands Ltd &copy; 2022. All Rights Reserved</span></p>
+        <p><span class="footer-copyright">Samapta &copy; 2022. All Rights Reserved</span></p>
       </div>
     </footer>
     <!-- font awesome script -->
@@ -79,7 +79,7 @@
 </html>
 00</p>
         <p><span class="accent-color">Sun</span> Closed</p>
-        <p><span class="footer-copyright">Right Hands Ltd &copy; 2022. All Rights Reserved</span></p>
+        <p><span class="footer-copyright">Samapta &copy; 2022. All Rights Reserved</span></p>
       </div>
     </footer>
     <!-- font awesome script -->
