--- a/services.html
+++ b/services.html
@@ -86,7 +86,7 @@
     </body>
 </html>
 65l2.5665j0j7&sourceid=chrome&ie=UTF-8" target="_blank" rel="noopener" aria-label="Visit our Google My page (opens in a new tab)"><i class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/righthandshandymancarlow/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
                 </div>       
             </div>
             <!-- footer center -->
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <!-- footer right -->
-            <div class="footer-right"><h3>Right Hands Ltd</h3>
+            <div class="footer-right"><h3>Samapta Buleleng</h3>
                 <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
                 <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
                 <p><span class="accent-color">Sun</span> Closed</p>
