--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ ok<!DOCTYPE html>
         </div>
       </div>
       <!-- footer right -->
-      <div class="footer-right"><h3>Right Hands Ltd</h3>
+      <div class="footer-right"><h3>Satuan Samapta</h3>
         <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
         <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
         <p><span class="accent-color">Sun</span> Closed</p>
