--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <!-- footer right -->
-            <div class="footer-right"><h3>Right Hands Ltd</h3>
+            <div class="footer-right"><h3>Satuan Samapta</h3>
                 <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
                 <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
                 <p><span class="accent-color">Sun</span> Closed</p>
@@ -90,7 +90,7 @@
     </body>
 </html>
 p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright">Right Hands Ltd &copy; 2022. All Rights Reserved</span></p>
+                <p><span class="footer-copyright">Satuan Samapta &copy; 2022. All Rights Reserved</span></p>
             </div>
         </footer>
         <!-- font awesome script -->
