--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                 <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
                 <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
                 <p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright">Right Hands Ltd &copy; 2022. All Rights Reserved</span></p>
+                <p><span class="footer-copyright">Satuan Samapta&copy; 2022. All Rights Reserved</span></p>
             </div>
         </footer>
         <!-- font awesome script -->
