--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,7 @@
                 <img src="assets/images/Pengawalan.jpg">
                 <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
-                <img src="assets/images/bathroom5.jpg">
-                <img src="assets/images/building.jpg">
-                <img src="assets/images/fencing.jpg">
-                <img src="assets/images/flooring1.jpg">
-                <img src="assets/images/flooring2.jpg">
-                <img src="assets/images/guttercleaning.jpg">
-                <img src="assets/images/ApelPagi.jpg">
-                <img src="assets/images/landscaping.jpg">
-                <img src="assets/images/bathroom6.jpg">
+                
               
               </div>
         </main>    
@@ -60,9 +52,9 @@
                     <p>Salam<span class="accent-color">Presisi</span> Polri.</span>
                 </div>
                 <div class="footer-icons">
-                    <a href="https://www.facebook.com/Handymancarlow" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.google.com/search?q=right+hands+carlow+handyman&rlz=1C1CHBF_enIE791IE791&oq=right+&aqs=chrome.0.69i59l2j46j69i60j69i61l2j69i65l2.5665j0j7&sourceid=chrome&ie=UTF-8" target="_blank" rel="noopener" aria-label="Visit our Google My Business page (opens in a new tab)"><i class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/righthandshandymancarlow/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.google.com/searc" target="_blank" rel="noopener" aria-label="Visit our Google My Business page (opens in a new tab)"><i class="fab fa-google"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
                 </div>       
             </div>
             <!-- footer center -->
