--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <!-- footer right -->
-            <div class="footer-right"><h3>Right Hands Ltd</h3>
+            <div class="footer-right"><h3>Satuan Samapta</h3>
                 <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
                 <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
                 <p><span class="accent-color">Sun</span> Closed</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <!-- footer right -->
-            <div class="footer-right"><h3>Samapta Buleleng</h3>
+            <div class="footer-right"><h3>Samapta</h3>
                 <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
                 <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
                 <p><span class="accent-color">Sun</span> Closed</p>
