--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Satuan Samapta Polres Buleleng">
-        <meta name="keywords" content="Satuan Samapta Buleleng">
+        <meta name="keywords" content="Satuan Samapta Polres Buleleng">
         <link rel="apple-touch-icon" href="assets/images/apple_touch_icon.png">
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Satuan Samapta</title>
