--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
         <!-- portfolio -->
         <main>
             <div id="gallery">
-                <img src="assets/images/PgPagi.jpg">
+                <img src="assets/images/PgPagi.png">
                 <img src="assets/images/Pengawalan.jpg">
                 <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
