--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <main>
             <div id="gallery">
                 <img src="assets/images/PgPagi.png">
-               <p> Personil samapta melaksanakan pg pagi di depan pasar banyuasri</p>
+               <p><h3> Personil samapta melaksanakan pg pagi di depan pasar banyuasri<h3></p>
                 <img src="assets/images/Pengawalan.jpg">
                 <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
