--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,8 @@
         <main>
             <div id="gallery">
                 <img src="assets/images/PgPagi.png">
-               <p><h3> Personil samapta melaksanakan pg pagi di depan pasar banyuasri<h3></p>
+                <h3>PG Pagi</h3>
+                <p>Personil samapta melaksanakan pg pagi di depan pasar banyuasri.</p>
                 <img src="assets/images/Pengawalan.jpg">
                 <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
