--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,7 @@
         <main>
             <div id="gallery">
                 <img src="assets/images/PgPagi.png">
+            </div>   
                 <h3>PG Pagi</h3>
                 <p>Personil samapta melaksanakan pg pagi di depan pasar banyuasri.</p>
                 <img src="assets/images/Pengawalan.jpg">
