--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,11 @@
         <!-- portfolio -->
         <main>
             <div id="gallery">
+               <figure align="center" >
                 <img src="assets/images/PgPagi.png">
-            </div>   
-                <h3>PG Pagi</h3>
-                <p>Personil samapta melaksanakan pg pagi di depan pasar banyuasri.</p>
+                <figcaption align="center">PG Pagi </figcaption>
+                </figure>
+                   <p>Personil samapta melaksanakan pg pagi di depan pasar banyuasri.</p>
                 <img src="assets/images/Pengawalan.jpg">
                 <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
