--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,11 @@
                 <figcaption align="center">PG Pagi </figcaption>
                 </figure>
                    <p>Personil samapta melaksanakan pg pagi di depan pasar banyuasri.</p>
+                <div id="gallery">
+                <figure align="center" >
                 <img src="assets/images/Pengawalan.jpg">
+                <figcaption align="center">Pengawalan </figcaption>
+                </figure>
                 <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
                 
