--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,25 @@
         </header>
         <!-- portfolio -->
         <main>
+            <html>
+
+<body>
+
+<p>PG Pagi</p>
+
+<p>Melaksanakan pengaturan:</p>
+
+<figure align="center" >diagram
+
+  <img src="assets/images/PgPagi.png" alt="PgPagi" width="704" height="328">
+
+  <figcaption align="center">Gambar 1. Pg Pagi</figcaption>
+
+</figure>
+
+</body>
+
+</html>
             <div id="gallery">
                
              <img src="assets/images/PgPagi.png" name="PG Pagi">
@@ -66,7 +85,7 @@
             <!-- footer center -->
             <div class="footer-center">
                 <div><i class="fa fa-map-marker"></i>
-                <p>Jln Pramuka No 1 - Singaraja/p>
+                <p>Jln Pramuka No 1 - Singaraja</p>
                 </div>
                 <div><i class="fa fa-phone"></i>
                 <p>08080808</p>
