--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,11 @@
 
 <body>
 
-<p>PG Pagi</p>
+<p><span class="accent-color" PG Pagi </span></p>
 
-<p>Melaksanakan pengaturan:</p>
+<p><span classes="accent-color" Melaksanakan pengaturan <span></p>
 
-<figure align="center" >diagram
+<figure align="center" >kamis 27 januari 2022
 
   <img src="assets/images/PgPagi.png" alt="PgPagi" width="350" height="328">
 
@@ -73,7 +73,7 @@
         <footer class="footer-container">
             <!-- footer left -->
             <div class="footer-left">
-                <div class="footer-company-about">
+                <div class="footer-company">
                     <h3><span>About</span> Us</h3>
                     <p>Senantiasa<span class="accent-color">Melindungi</span> Mengayomi <span class="accent-color">dan</span> Melayani Masyarakat.</p>
                     <p>Salam<span class="accent-color">Presisi</span> Polri.</span>
