--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
 
 <p><span class="accent-color"> PG Pagi </span></p>
 
-<p><span classes="accent-color"> Melaksanakan pengaturan </span></p>
+<p><span class="accent-color"> Melaksanakan pengaturan </span></p>
 
-<figure align="center" >kamis 27 januari 2022
+<figure align="center" ><span class="accent-color"> kamis 27 januari 2022 </span>
 
  <p><img src="assets/images/PgPagi.png" alt="PgPagi" width="350" height="328"></p>
 
