--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,9 @@
 
 <figure align="center" ><span class="accent-color"> kamis 27 januari 2022 </span>
 
- <p><img src="assets/images/PgPagi.png" alt="PgPagi" width="350" height="328"></p>
+ <p><img src="assets/images/PgPagi.png" alt="PgPagi"></p>
 
-  <figcaption align="center">Gambar 1. Pg Pagi</figcaption>
+  <P><figcaption align="center">Gambar 1. Pg Pagi</figcaption></P>
 
 </figure>
 
