--- a/portfolio.html
+++ b/portfolio.html
@@ -35,31 +35,28 @@
         <main>
             <html>
 
-<body>
+   <body>
+  <div
+    <p><span class="accent-color"> PG Pagi </span></p>
 
-<p><span class="accent-color"> PG Pagi </span></p>
+    <p><span class="accent-color"> Melaksanakan pengaturan di patung sapi  </span></p>
 
-<p><span class="accent-color"> Melaksanakan pengaturan di patung sapi  </span></p>
-
-<figure align="top" ><span class="accent-color"> kamis 27 januari 2022 </span>
-<div id="gallery">
- <img src="assets/images/PgPagi.png" alt="PgPagi">
-
-  <figcaption align="bottom">Gambar 1. Pg Pagi</figcaption>
-
+    <figure align="top" ><span class="accent-color"> kamis 27 januari 2022 </span>
+    <div id="gallery">
+    <img src="assets/images/PgPagi.png" alt="PgPagi">
+    </figure>
+   </div>
+  <div
 <p><span class="accent-color"> Melaksanakan pengawalan </span></p>
 
 <figure align="top" ><span class="accent-color"> SSI singaraja </span>
 <div id="gallery">
  <img src="assets/images/Pengawalan.jpg" alt="Pengawalan">
-
-  <figcaption align="bottom">Gambar 2. Pengawalan</figcaption>
-
+</div>
 </figure>
-
-                <p> personil melaksanakan pengawalan </p>
-               
-                <img src="assets/images/PenjagaanObvit.jpg">
+ </div>      
+<div 
+    <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
       
               </div>
