--- a/portfolio.html
+++ b/portfolio.html
@@ -49,16 +49,20 @@
   <div
 <p><span class="accent-color"> Melaksanakan pengawalan </span></p>
 
-<figure align="top" ><span class="accent-color"> SSI singaraja </span>
+<figure align="top" ><span class="accent-color"> BNI singaraja </span>
 <div id="gallery">
  <img src="assets/images/Pengawalan.jpg" alt="Pengawalan">
 </div>
 </figure>
  </div>      
 <div 
-    <img src="assets/images/PenjagaanObvit.jpg">
+  <p><span class="accent-color"> Melaksanakan pengamanan Bank BNI </span></p>
+  <figure align="top" ><apan="class="accent-color"> Sebagai tindak lanjut MOU</span>
+  <div id="gallery">
+
+  <img src="assets/images/PenjagaanObvit.jpg">
                 <img src="assets/images/PenjagaanMako.jpg">
-      
+   </div>   
               </div>
         </main>    
             <!-- footer -->
@@ -71,9 +75,9 @@
                     <p>Salam<span class="accent-color">Presisi</span> Polri.</span>
                 </div>
                 <div class="footer-icons">
-                    <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.google.com/searc" target="_blank" rel="noopener" aria-label="Visit our Google My Business page (opens in a new tab)"><i class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/satsabhara.polresbuleleng.9" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                    <a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q" target="_blank" rel="noopener" aria-label="Visit our youtube(opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                    <a href="https://instagram.com/satsamaptabuleleng?utm_medium=copy_link" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
                 </div>       
             </div>
             <!-- footer center -->
@@ -81,11 +85,11 @@
                 <div><i class="fa fa-map-marker"></i>
                 <p>Jln Pramuka No 1 - Singaraja</p>
                 </div>
-                <div><i class="fa fa-phone"></i>
-                <p>08080808</p>
+                <div><i class="fa fa-instagram"></i>
+                <p><a href="https://instagram.com/satsamaptabuleleng?utm_medium=copy_link</a></p>
                 </div>
-                <div><i class="fa fa-envelope"></i>
-                <p><a href="mailto:mailmail@gmail.com">info@righthands.ie</a></p>
+                <div><i class="fa fa-youtube"></i>
+                <p><a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q ">info@righthands.ie</a></p>
                 </div>
             </div>
             <!-- footer right -->
@@ -93,7 +97,7 @@
                 <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
                 <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
                 <p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright">Satuan Samapta&copy; 2022. All Rights Reserved</span></p>
+                <p><span class="footer-copyright">Satuan Samapta&copy; 2022.</span></p>
             </div>
         </footer>
         <!-- font awesome script -->
@@ -101,7 +105,7 @@
     </body>
 </html>
 p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright">Satuan Samapta &copy; 2022. All Rights Reserved</span></p>
+                <p><span class="footer-copyright">Satuan Samapta &copy; 2022 </span></p>
             </div>
         </footer>
         <!-- font awesome script -->
