--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="Satuan Samapta Polres Buleleng">
         <link rel="apple-touch-icon" href="assets/images/apple_touch_icon.png">
         <link rel="stylesheet" href="assets/css/style.css">
-        <title>Dikumentasi Giat</title>
+        <title>Satuan Samapta</title>
     </head>
     <body>
         <header>
