--- a/portfolio.html
+++ b/portfolio.html
@@ -57,13 +57,24 @@
  </div>      
 <div 
   <p><span class="accent-color"> Melaksanakan pengamanan Bank BNI </span></p>
-  <figure align="top" ><apan="class="accent-color"> Sebagai tindak lanjut MOU</span>
+  <figure align="top" ><apan="class="accent-color"> Sebagai tindak lanjut MOU </span>
   <div id="gallery">
 
   <img src="assets/images/PenjagaanObvit.jpg">
-                <img src="assets/images/PenjagaanMako.jpg">
-   </div>   
-              </div>
+   </div>
+      </figure>
+      </div>
+      <div
+      <p><span class="accent-color"> Melaksanakan Patroli </span></p>
+
+      <figure align="top" ><span class="accent-color"> ke kawasan wisata </span>
+
+      <div id="gallery">
+      <img src="assets/images/PenjagaanMako.jpg">
+     </div>
+     </figure>
+      </div>   
+
         </main>    
             <!-- footer -->
         <footer class="footer-container">
