--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 
    <body>
   <div
-    <p><span class="accent-color"> PG Pagi </span></p>
+    <p><span class="accent-color"> Uraian Kegiatan </span></p>
 
     <p><span class="accent-color"> Melaksanakan pengaturan di patung sapi  </span></p>
 
@@ -57,10 +57,10 @@
  </div>      
 <div 
   <p><span class="accent-color"> Melaksanakan pengamanan Bank BNI </span></p>
-  <figure align="top" ><apan="class="accent-color"> Sebagai tindak lanjut MOU </span>
+  <figure align="top" ><span="class="accent-color"> Sebagai tindak lanjut MOU </span>
   <div id="gallery">
 
-  <img src="assets/images/PenjagaanObvit.jpg">
+  <img src="assets/images/PenjagaanObvit.jpg" alt="penjagaan obvit">
    </div>
       </figure>
       </div>
@@ -70,7 +70,7 @@
       <figure align="top" ><span class="accent-color"> ke kawasan wisata </span>
 
       <div id="gallery">
-      <img src="assets/images/PenjagaanMako.jpg">
+      <img src="assets/images/PenjagaanMako.jpg" alt="penjagaan mako">
      </div>
      </figure>
       </div>   
