--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
  </div>      
 <div 
   <p><span class="accent-color"> Melaksanakan pengamanan Bank BNI </span></p>
-  <figure align="top" ><span="class="accent-color"> Sebagai tindak lanjut MOU </span>
+  <figure align="top" ><span class="accent-color"> Sebagai tindak lanjut MOU </span>
   <div id="gallery">
 
   <img src="assets/images/PenjagaanObvit.jpg" alt="penjagaan obvit">
