--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 
     <figure align="top" ><span class="accent-color"> kamis 27 januari 2022 </span>
     <div id="gallery">
-    <img src="assets/images/PgPagi.png" alt="PgPagi">
+    <img src="assets/images/PgPagi.jpg" alt="PgPagi">
     </figure>
    </div>
   <div
@@ -70,7 +70,7 @@
       <figure align="top" ><span class="accent-color"> ke kawasan wisata </span>
 
       <div id="gallery">
-      <img src="assets/images/PenjagaanMako.jpg" alt="penjagaan mako">
+      <img src="assets/images/patroli.jpg" alt="penjagaan mako">
      </div>
      </figure>
       </div>   
