--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
   <figure align="top" ><span class="accent-color"> Sebagai tindak lanjut MOU </span>
   <div id="gallery">
 
-  <img src="assets/images/PenjagaanObvit.jpg" alt="penjagaan obvit">
+  <img src="assets/images/Jaga.jpg" alt="penjagaan">
    </div>
       </figure>
       </div>
