--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
   <div
     <p><span class="accent-color"> Uraian Kegiatan </span></p>
 
-    <p><span class="accent-color"> Melaksanakan pengaturan di patung sapi  </span></p>
+    <p><span class="accent-color"> Melaksanakan pengaturan di jalan </span></p>
 
-    <figure align="top" ><span class="accent-color"> kamis 27 januari 2022 </span>
+    <figure align="top" ><span class="accent-color"> Jumat 28 januari 2022 </span>
     <div id="gallery">
     <img src="assets/images/PgPagi.jpg" alt="PgPagi">
     </figure>
