--- a/index.html
+++ b/index.html
@@ -55,22 +55,30 @@ ok<!DOCTYPE html>
       </div>
       <!-- footer center-->
       <div class="footer-center">
-        <div><i class="fa fa-map-marker"></i>
-        <p>Jln Pramuka No 1 - Singaraja</p>
-        </div>
-        <div><i class="fa fa-phone"></i>
-        <p>08080808</p>
-        </div>
-        <div><i class="fa fa-envelope"></i>
-        <p><a href="mailto:mailmail@gmail.com">info@righthands.ie</a></p>
-        </div>
+       
+
+                <div><i class="fa fa-map-marker"></i>
+
+                <p>Jln Pramuka No 1 - Singaraja</p>
+
+                </div>
+
+                <div><i class="fa fa-instagram"></i>
+
+                <p><a href="https://instagram.com/satsamaptabuleleng?utm_medium=copy_link</a></p>
+
+                </div>
+
+                <div><i class="fa fa-youtube"></i>
+
+                <p><a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q ">info@righthands.ie</a></p>
+
+                </div>
       </div>
       <!-- footer right -->
       <div class="footer-right"><h3>Satuan Samapta</h3>
-        <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
-        <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
-        <p><span class="accent-color">Sun</span> Closed</p>
-        <p><span class="footer-copyright">Samapta &copy; 2022. All Rights Reserved</span></p>
+       
+        <p><span class="footer-copyright">Samapta &copy; 2022. samapta</span></p>
       </div>
     </footer>
     <!-- font awesome script -->
