--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@ ok<!DOCTYPE html>
           <p>Salam <span class="accent-color">Presisi</span> Polri.</span>
         </div>
         <div class="footer-icons">
-          <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.google.com/" target="_blank" rel="noopener" aria-label="Visit our Google My page (opens in a new tab)"><i class="fab fa-google"></i></a>
-          <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-        </div>       
+          <a href="https://www.facebook.com/satsabhara.polresbuleleng.9" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+
+                    <a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q" target="_blank" rel="noopener" aria-label="Visit our youtube(opens in a new tab)"><i class="fab fa-youtube"></i></a>
+
+                    <a href="https://instagram.com/satsamaptabuleleng?utm_medium=copy_link" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+
+                </div>
       </div>
       <!-- footer center-->
       <div class="footer-center">
