--- a/contacts.html
+++ b/contacts.html
@@ -85,9 +85,9 @@
                     <p>Salam <span class="accent-color">Presisi</span>Polri</span>
                 </div>
                 <div class="footer-icons">
-                    <a href="https://www.facebook.com/Handymancarlow" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.google.com/ttttttt" target="_blank" rel="noopener" aria-label="Visit our Google My Business page (opens in a new tab)"><i class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/satsabhara.polresbuleleng.9" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                    <a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q" target="_blank" rel="noopener" aria-label="Visit our youtube channel(opens in a new tab)"><i class="fab fa-google"></i></a>
+                    <a href="https://instagram.com/satsamaptabuleleng?utm_medium=copy_link" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
                 </div>       
             </div>
             <!-- footer center -->
@@ -104,10 +104,8 @@
             </div>
             <!-- footer right -->
             <div class="footer-right"><h3>Satuan Samapta</h3>
-                <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
-                <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
-                <p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright"><small>Samapta copy; 2022. All Rights Reserved</span></p>
+                
+                <p><span class="footer-copyright"><small>Samapta copy; 2022. Samapta</span></p>
             </div>
         </footer>
         
