--- a/contacts.html
+++ b/contacts.html
@@ -94,13 +94,7 @@
             <div class="footer-center">
                 <div><i class="fa fa-map-marker"></i>
                 <p>Jln Pramuka No 1 - Singaraja</p>
-                </div>
-                <div><i class="fa fa-phone"></i>
-                <p>+0800808</p>
-                </div>
-                <div><i class="fa fa-envelope"></i>
-                <p><a href="mailto:mailmail@gmail.com">info@righthands.ie</a></p>
-                </div>
+                
             </div>
             <!-- footer right -->
             <div class="footer-right"><h3>Satuan Samapta</h3>
@@ -112,11 +106,7 @@
         <!-- font awesome script -->
         <script src="https://kit.fontawesome.com/abebfafba8.js" crossorigin="anonymous"></script>
     </body>
-</html>i</span> 9:00 - 18:00</p>
-                <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
-                <p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright"><small>Satuan Samapta &copy; 2022. All Rights Reserved</span></p>
-            </div>
+</html>
         </footer>
         
         <!-- font awesome script -->
