--- a/contacts.html
+++ b/contacts.html
@@ -42,14 +42,7 @@
                             <div class="text-one">Jln Pramuka No 1 sgr</div>
                             <div class="text-two">Singaraja</div>
                         </div>
-                        <div class="phone details"><i class="fas fa-phone-alt"></i>
-                            <div class="topic">Phone</div>
-                            <div class="text-one">451 64 03</div>
-                        </div>
-                        <div class="email details"><i class="fas fa-envelope"></i>
-                            <div class="topic">Email</div>
-                            <div class="text-one"><a href="samapta@gmail.com">info@righthands.ie</a></div>
-                        </div>
+                        
                     </div>
                     <!-- contact form right -->
                     <div class="right-side">
@@ -86,7 +79,7 @@
                 </div>
                 <div class="footer-icons">
                     <a href="https://www.facebook.com/satsabhara.polresbuleleng.9" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-                    <a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q" target="_blank" rel="noopener" aria-label="Visit our youtube channel(opens in a new tab)"><i class="fab fa-google"></i></a>
+                    <a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q" target="_blank" rel="noopener" aria-label="Visit our youtube channel(opens in a new tab)"><i class="fab fa-youtube"></i></a>
                     <a href="https://instagram.com/satsamaptabuleleng?utm_medium=copy_link" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
                 </div>       
             </div>
