--- a/services.html
+++ b/services.html
@@ -56,9 +56,9 @@
                     <p>Salam <span class="accent-color">Presisi</span> Polri.</span>
                 </div>
                 <div class="footer-icons">
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.google.com/" target="_blank" rel="noopener" aria-label="Visit our Google My page (opens in a new tab)"><i class="fab fa-google"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/satsabhara.polresbuleleng.9" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                    <a href="https://youtube.com/channel/UCFS8zK6vRKDEJgggzTLN48Q" target="_blank" rel="noopener" aria-label="Visit our youtube channel (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                    <a href="https://instagram.com/satsamaptabuleleng?utm_medium=copy_link" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
                 </div>       
             </div>
             <!-- footer center -->
@@ -66,19 +66,11 @@
                 <div><i class="fa fa-map-marker"></i>
                 <p>Jln Pramuka No 1- Singaraja</p>
                 </div>
-                <div><i class="fa fa-phone"></i>
-                <p>080808</p>
-                </div>
-                <div><i class="fa fa-envelope"></i>
-                <p><a href="mailto:mailmail@gmail.com">Samapta</a></p>
-                </div>
+                
             </div>
             <!-- footer right -->
             <div class="footer-right"><h3>Satuan Samapta</h3>
-                <p><span class="accent-color">Mon - Fri</span> 9:00 - 18:00</p>
-                <p><span class="accent-color">Sat</span> 9:00 - 15:00</p>
-                <p><span class="accent-color">Sun</span> Closed</p>
-                <p><span class="footer-copyright">Samapta; 2022. All Rights Reserved</span></p>
+                 
             </div>
         </footer>
         <!-- font awesome script -->
