--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Satuan Samapta Polres Buleleng">
       <meta name="keywords" content="Satuan Samapta Polres Buleleng">
-      <link rel="apple-touch-icon" href="assets/images/apple_touch_icon.png">
+      <link rel="apple-touch-icon" href="assets/images/Dalmas.jpg">
       <meta name="theme-color" content="#orange"/>
       <link rel="stylesheet" href="assets/css/style.css">
       <title>Satuan Samapta</title>
