--- a/services.html
+++ b/services.html
@@ -37,11 +37,12 @@
                 <div class="Lap har giat">
                     <h1>Samapta</h1>
                     <ul class="services-list">
-                        <li>Pg Pagi</li>
-                        <li>Apel Pagi</li>
-                        <li>Penjagaan</li>
-                        <li>Pengawalan</li>
-                        <li>Patroli</li>                    
+                        <li>Vaksinasi Presisi</li>
+                         <div                   
+                    
+                      <h3> Pada  hari Sabtu, 29  Januari 2022, pkl 09.00 wita,  Personel Unit Dalmas Sat Samapta Polres Buleleng,  melaksanakan giat vaksinasi  yang bertempat di SD no 6 Desa Panji sukasada dan di Kantor Desa Adat  Munduk, Kec. Banjar, Kabupaten Buleleng.
+                      </h3>
+                     </div>
                     </ul>                
                 </div>
             </div>
