--- a/services.html
+++ b/services.html
@@ -40,8 +40,9 @@
                         <li>Vaksinasi Presisi</li>
                          <div                   
                     
-                      <h3> Pada  hari Sabtu, 29  Januari 2022, pkl 09.00 wita,  Personel Unit Dalmas Sat Samapta Polres Buleleng,  melaksanakan giat vaksinasi  yang bertempat di SD no 6 Desa Panji sukasada dan di Kantor Desa Adat  Munduk, Kec. Banjar, Kabupaten Buleleng.
-                      </h3>
+                      <h3><font color="black">Pada  hari Sabtu, 29  Januari 2022, pkl 09.00 wita,  Personel Unit Dalmas Sat Samapta Polres Buleleng,  melaksanakan giat vaksinasi  yang bertempat di SD no 6 Desa Panji sukasada dan di Kantor Desa Adat  Munduk, Kec. Banjar, Kabupaten Buleleng.
+                       </font>
+                       </h3>
                      </div>
                     </ul>                
                 </div>
