--- a/services.html
+++ b/services.html
@@ -43,7 +43,14 @@
                       <h3><font color="black">Pada  hari Sabtu, 29  Januari 2022, pkl 09.00 wita,  Personel Unit Dalmas Sat Samapta Polres Buleleng,  melaksanakan giat vaksinasi  yang bertempat di SD no 6 Desa Panji sukasada dan di Kantor Desa Adat  Munduk, Kec. Banjar, Kabupaten Buleleng.
                        </font>
                        </h3>
-                     </div>
+                    <div id="gallery">
+                    <img src="assets/Photo/vaks1.jpg.jpg">
+                    <img src="assets/Photo/vaks2.jpg">
+                    <img src="assets/Photo/vaks3.jpg">
+                    <img src="assets/Photo/vaks4.jpg">
+                    <img src="assets/Photo/vaks5.jpg">
+                    </div>
+                    </div>
                     </ul>                
                 </div>
             </div>
