--- a/services.html
+++ b/services.html
@@ -44,11 +44,11 @@
                        </font>
                        </h3>
                     <div id="gallery">
-                    <img src="assets/Photo/vaks1.jpg.jpg">
-                    <img src="assets/Photo/vaks2.jpg">
-                    <img src="assets/Photo/vaks3.jpg">
-                    <img src="assets/Photo/vaks4.jpg">
-                    <img src="assets/Photo/vaks5.jpg">
+                    <img src="assets/Photo/vaks1.jpg.jpg" alt="vaks1">
+                    <img src="assets/Photo/vaks2.jpg" alt="vaks2">
+                    <img src="assets/Photo/vaks3.jpg" alt="vaks3">
+                    <img src="assets/Photo/vaks4.jpg" alt="vaks4">
+                    <img src="assets/Photo/vaks5.jpg" alt="vaks5>
                     </div>
                     </div>
                     </ul>                
