--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
                     <img src="assets/Photo/vaks3.jpg" alt="vaks3">
                     <img src="assets/Photo/vaks4.jpg" alt="vaks4">
                     <img src="assets/Photo/vaks5.jpg" alt="vaks5>
-                    </div>
+                    </div id="gallery">
                     </div>
                     </ul>                
                 </div>
